@@ -1,5 +1,5 @@
 /*
- * Copyright 2023-2024 the original author or authors.
+ * Copyright 2023-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,12 +18,12 @@ package org.springframework.ai.vectorstore.qdrant;
 
 import java.util.HashMap;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import io.qdrant.client.grpc.JsonWithInt.ListValue;
 import io.qdrant.client.grpc.JsonWithInt.Value;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
+import org.jspecify.annotations.Nullable;
 
 import org.springframework.util.Assert;
 
@@ -41,9 +41,9 @@ final class QdrantObjectFactory {
 	private QdrantObjectFactory() {
 	}
 
-	public static Map<String, Object> toObjectMap(Map<String, Value> payload) {
+	public static Map<String, ? super Object> toObjectMap(Map<String, Value> payload) {
 		Assert.notNull(payload, "Payload map must not be null");
-		Map<String, Object> map = new HashMap<>();
+		Map<String, @Nullable Object> map = new HashMap<>();
 		for (Map.Entry<String, Value> entry : payload.entrySet()) {
 			map.put(entry.getKey(), object(entry.getValue()));
 		}
@@ -51,10 +51,10 @@ final class QdrantObjectFactory {
 	}
 
 	private static Object object(ListValue listValue) {
-		return listValue.getValuesList().stream().map(QdrantObjectFactory::object).collect(Collectors.toList());
+		return listValue.getValuesList().stream().map(QdrantObjectFactory::object).toList();
 	}
 
-	private static Object object(Value value) {
+	private static @Nullable Object object(Value value) {
 
 		return switch (value.getKindCase()) {
 			case INTEGER_VALUE -> value.getIntegerValue();
